feat: cyclic sort init

--- a/educative/pattern_for_coding_questions/merge_intervals/merge_intervals.ipynb
+++ b/educative/pattern_for_coding_questions/merge_intervals/merge_intervals.ipynb
@@ -159,13 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can attend all appointments: False\n",
+      "Can attend all appointments: True\n",
+      "Can attend all appointments: False\n"
+     ]
+    }
+   ],
    "source": [
     "#Conflicting appointment medium\n",
     "def can_attend_all_appointments(intervals):\n",
@@ -186,6 +196,232 @@
     "print(\"Can attend all appointments: \" + str(can_attend_all_appointments([[1, 4], [2, 5], [7, 9]])))\n",
     "print(\"Can attend all appointments: \" + str(can_attend_all_appointments([[6, 7], [2, 4], [8, 12]])))\n",
     "print(\"Can attend all appointments: \" + str(can_attend_all_appointments([[4, 5], [2, 3], [3, 6]])))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum meeting rooms required: 2\n",
+      "Minimum meeting rooms required: 1\n",
+      "Minimum meeting rooms required: 2\n",
+      "Minimum meeting rooms required: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from heapq import *\n",
+    "\n",
+    "#Problem challenge 1 \n",
+    "# Minimum meeting rooms hard/medium\n",
+    "\n",
+    "class Meeting:\n",
+    "    def __init__(self,start,end):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    def __lt__(self,other):\n",
+    "        return self.end < other.end\n",
+    "\n",
+    "def min_meeting_rooms(meetings):\n",
+    "    meetings.sort(key=lambda x:x.start)\n",
+    "\n",
+    "    minRooms=0\n",
+    "    minHeap=[]\n",
+    "    for meeting in meetings:\n",
+    "        while(len(minHeap)>0 and meeting.start>=minHeap[0].end):\n",
+    "            heappop(minHeap)\n",
+    "        heappush(minHeap,meeting)\n",
+    "\n",
+    "        minRooms = max(minRooms,len(minHeap))\n",
+    "    return minRooms\n",
+    "\n",
+    "\n",
+    "print(\"Minimum meeting rooms required: \" +\n",
+    "    str(min_meeting_rooms([Meeting(1, 4), Meeting(2, 5), Meeting(7, 9)])))\n",
+    "print(\"Minimum meeting rooms required: \" +\n",
+    "    str(min_meeting_rooms([Meeting(6, 7), Meeting(2, 4), Meeting(8, 12)])))\n",
+    "print(\"Minimum meeting rooms required: \" +\n",
+    "    str(min_meeting_rooms([Meeting(1, 4), Meeting(2, 3), Meeting(3, 6)])))\n",
+    "print(\"Minimum meeting rooms required: \" + str(min_meeting_rooms(\n",
+    "[Meeting(4, 5), Meeting(2, 3), Meeting(2, 4), Meeting(3, 5)])))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum CPU load at any time: 7\n",
+      "Maximum CPU load at any time: 15\n",
+      "Maximum CPU load at any time: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Problem challenge 2 \n",
+    "# Maximum CPU LOAD hard\n",
+    "\n",
+    "from heapq import *\n",
+    "\n",
+    "\n",
+    "class job:\n",
+    "  def __init__(self, start, end, cpu_load):\n",
+    "    self.start = start\n",
+    "    self.end = end\n",
+    "    self.cpu_load = cpu_load\n",
+    "\n",
+    "  def __lt__(self, other):\n",
+    "    # min heap based on job.end\n",
+    "    return self.end < other.end\n",
+    "\n",
+    "\n",
+    "def find_max_cpu_load(jobs):\n",
+    "  # sort the jobs by start time\n",
+    "  jobs.sort(key=lambda x: x.start)\n",
+    "  max_cpu_load, current_cpu_load = 0, 0\n",
+    "  min_heap = []\n",
+    "\n",
+    "  for j in jobs:\n",
+    "    # remove all the jobs that have ended\n",
+    "    while(len(min_heap) > 0 and j.start >= min_heap[0].end):\n",
+    "      current_cpu_load -= min_heap[0].cpu_load\n",
+    "      heappop(min_heap)\n",
+    "    # add the current job into min_heap\n",
+    "    heappush(min_heap, j)\n",
+    "    current_cpu_load += j.cpu_load\n",
+    "    max_cpu_load = max(max_cpu_load, current_cpu_load)\n",
+    "  return max_cpu_load\n",
+    "\n",
+    "\n",
+    "print(\"Maximum CPU load at any time: \" + str(find_max_cpu_load([job(1, 4, 3), job(2, 5, 4), job(7, 9, 6)])))\n",
+    "print(\"Maximum CPU load at any time: \" + str(find_max_cpu_load([job(6, 7, 10), job(2, 4, 11), job(8, 12, 15)])))\n",
+    "print(\"Maximum CPU load at any time: \" + str(find_max_cpu_load([job(1, 4, 2), job(2, 4, 1), job(3, 6, 5)])))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Free intervals: [3, 5]\n",
+      "Free intervals: [4, 6][8, 9]\n",
+      "Free intervals: [5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Problem 3 \n",
+    "#Employee free time hard/medium\n",
+    "from __future__ import print_function\n",
+    "from heapq import *\n",
+    "\n",
+    "\n",
+    "class Interval:\n",
+    "    def __init__(self, start, end):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "\n",
+    "    def print_interval(self):\n",
+    "        print(\"[\" + str(self.start) + \", \" + str(self.end) + \"]\", end='')\n",
+    "\n",
+    "\n",
+    "class EmployeeInterval:\n",
+    "\n",
+    "    def __init__(self, interval, employeeIndex, intervalIndex):\n",
+    "        self.interval = interval  # interval representing employee's working hours\n",
+    "        # index of the list containing working hours of this employee\n",
+    "        self.employeeIndex = employeeIndex\n",
+    "        self.intervalIndex = intervalIndex  # index of the interval in the employee list\n",
+    "\n",
+    "    def __lt__(self, other):\n",
+    "        # min heap based on meeting.end\n",
+    "        return self.interval.start < other.interval.start\n",
+    "\n",
+    "\n",
+    "def find_employee_free_time(schedule):\n",
+    "    if schedule is None:\n",
+    "        return []\n",
+    "\n",
+    "    n = len(schedule)\n",
+    "    result, minHeap = [], []\n",
+    "\n",
+    "    # insert the first interval of each employee to the queue\n",
+    "    for i in range(n):\n",
+    "        heappush(minHeap, EmployeeInterval(schedule[i][0], i, 0))\n",
+    "\n",
+    "    previousInterval = minHeap[0].interval\n",
+    "    while minHeap:\n",
+    "        queueTop = heappop(minHeap)\n",
+    "        # if previousInterval is not overlapping with the next interval, insert a free interval\n",
+    "        if previousInterval.end < queueTop.interval.start:\n",
+    "            result.append(Interval(previousInterval.end,\n",
+    "                                   queueTop.interval.start))\n",
+    "            previousInterval = queueTop.interval\n",
+    "        else:  # overlapping intervals, update the previousInterval if needed\n",
+    "            if previousInterval.end < queueTop.interval.end:\n",
+    "                previousInterval = queueTop.interval\n",
+    "\n",
+    "        # if there are more intervals available for the same employee, add their next interval\n",
+    "        employeeSchedule = schedule[queueTop.employeeIndex]\n",
+    "        if len(employeeSchedule) > queueTop.intervalIndex + 1:\n",
+    "            heappush(minHeap, EmployeeInterval(employeeSchedule[queueTop.intervalIndex + 1], queueTop.employeeIndex,\n",
+    "                                               queueTop.intervalIndex + 1))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "\n",
+    "input = [[Interval(1, 3), Interval(5, 6)], [\n",
+    "    Interval(2, 3), Interval(6, 8)]]\n",
+    "print(\"Free intervals: \", end='')\n",
+    "for interval in find_employee_free_time(input):\n",
+    "    interval.print_interval()\n",
+    "print()\n",
+    "\n",
+    "input = [[Interval(1, 3), Interval(9, 12)], [\n",
+    "    Interval(2, 4)], [Interval(6, 8)]]\n",
+    "print(\"Free intervals: \", end='')\n",
+    "for interval in find_employee_free_time(input):\n",
+    "    interval.print_interval()\n",
+    "print()\n",
+    "\n",
+    "input = [[Interval(1, 3)], [\n",
+    "    Interval(2, 4)], [Interval(3, 5), Interval(7, 9)]]\n",
+    "print(\"Free intervals: \", end='')\n",
+    "for interval in find_employee_free_time(input):\n",
+    "    interval.print_interval()\n",
+    "print()\n",
     "\n",
     "\n"
    ]
