--- a/educative/inplace_reverse_ll/in_place.ipynb
+++ b/educative/inplace_reverse_ll/in_place.ipynb
@@ -62,13 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes of original LinkedList are: 1 2 3 4 5 \n",
+      "Nodes of reversed LinkedList are: 1 4 3 2 5 \n"
+     ]
+    }
+   ],
    "source": [
     "#Reverse sub- list medium\n",
     "\n",
@@ -139,6 +148,256 @@
     "head.print_list()\n",
     "result = reverse_sub_list(head, 2, 4)\n",
     "print(\"Nodes of reversed LinkedList are: \", end='')\n",
+    "result.print_list()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes of original LinkedList are: 1 2 3 4 5 6 7 8 \n",
+      "Nodes of reversed LinkedList are: 3 2 1 6 5 4 8 7 \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Reverse every K-element Sub-list  medium\n",
+    "\n",
+    "#Given the head of LL and number K reverse every k sized sub-list.\n",
+    "\n",
+    "from __future__ import print_function\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self,value,next=None):\n",
+    "        self.value = value\n",
+    "        self.next = next\n",
+    "\n",
+    "    def print_list(self):\n",
+    "        temp = self\n",
+    "        while temp:\n",
+    "            print(temp.value , end=\" \")\n",
+    "            temp = temp.next\n",
+    "        print()\n",
+    "\n",
+    "def reverse_every_k_elements(head,k):\n",
+    "    if k<=1 or head is None:\n",
+    "        return head\n",
+    "    curr , prev = head,None\n",
+    "\n",
+    "    while True:\n",
+    "        last_node_of_prev_part = prev\n",
+    "        last_node_of_sub_list = curr\n",
+    "        next = None\n",
+    "        i = 0\n",
+    "        while curr and i<k:\n",
+    "            next = curr.next\n",
+    "            curr.next = prev\n",
+    "            prev = curr\n",
+    "            curr = next\n",
+    "            i+=1\n",
+    "        #connect with prev part\n",
+    "        if last_node_of_prev_part:\n",
+    "            last_node_of_prev_part.next = prev\n",
+    "        else:\n",
+    "            head = prev\n",
+    "        \n",
+    "        #connect with the next part\n",
+    "        last_node_of_sub_list.next = curr\n",
+    "        if curr is None:\n",
+    "            break\n",
+    "        prev = last_node_of_sub_list\n",
+    "    \n",
+    "    return head\n",
+    "\n",
+    "\n",
+    "head = Node(1)\n",
+    "head.next = Node(2)\n",
+    "head.next.next = Node(3)\n",
+    "head.next.next.next = Node(4)\n",
+    "head.next.next.next.next = Node(5)\n",
+    "head.next.next.next.next.next = Node(6)\n",
+    "head.next.next.next.next.next.next = Node(7)\n",
+    "head.next.next.next.next.next.next.next = Node(8)\n",
+    "\n",
+    "print(\"Nodes of original LinkedList are: \", end='')\n",
+    "head.print_list()\n",
+    "result = reverse_every_k_elements(head, 3)\n",
+    "print(\"Nodes of reversed LinkedList are: \", end='')\n",
+    "result.print_list()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes of original LinkedList are: 1 2 3 4 5 6 7 8 9 10 \n",
+      "Nodes of reversed LinkedList are: 2 1 3 4 6 5 7 8 10 9 \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Problem challenge 1 \n",
+    "\n",
+    "# Reverse alternating k-element sub-list medium\n",
+    "#Given the head of a LL and a number, 'k', reverse every alternating 'k' sized sub-list starting form the head.\n",
+    "# If, in the end, you are left with sub-list with less than 'k' elements reverse it too. \n",
+    "\n",
+    "from __future__ import print_function\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, value , next=None):\n",
+    "        self.value = value\n",
+    "        self.next = next\n",
+    "\n",
+    "    def print_list(self):\n",
+    "        temp = self\n",
+    "        while temp:\n",
+    "            print(temp.value,end=\" \")\n",
+    "            temp = temp.next\n",
+    "        print(\"\")\n",
+    "\n",
+    "\n",
+    "def reverse_alternate_k_elements(head,k):\n",
+    "    if k<=1 or head is None:\n",
+    "        return head\n",
+    "\n",
+    "    curr,prev = head,None\n",
+    "\n",
+    "    while curr:\n",
+    "        last_node_of_prev_part = prev\n",
+    "        last_node_of_sub_list = curr\n",
+    "        next = None\n",
+    "\n",
+    "        i=0\n",
+    "        while curr and i<k:\n",
+    "            next = curr.next\n",
+    "            curr.next = prev\n",
+    "            prev = curr\n",
+    "            curr=next\n",
+    "            i+=1\n",
+    "            \n",
+    "        if last_node_of_prev_part:\n",
+    "            last_node_of_prev_part.next = prev\n",
+    "        else:\n",
+    "            head = prev\n",
+    "       \n",
+    "        last_node_of_sub_list.next = curr\n",
+    "\n",
+    "        i=0\n",
+    "        while curr  and i<k:\n",
+    "            prev = curr\n",
+    "            curr = curr.next\n",
+    "            i+=1\n",
+    "    return head\n",
+    "\n",
+    "head = Node(1)\n",
+    "head.next = Node(2)\n",
+    "head.next.next = Node(3)\n",
+    "head.next.next.next = Node(4)\n",
+    "head.next.next.next.next = Node(5)\n",
+    "head.next.next.next.next.next = Node(6)\n",
+    "head.next.next.next.next.next.next = Node(7)\n",
+    "head.next.next.next.next.next.next.next = Node(8)\n",
+    "head.next.next.next.next.next.next.next.next = Node(9)\n",
+    "head.next.next.next.next.next.next.next.next.next = Node(10)\n",
+    "\n",
+    "print(\"Nodes of original LinkedList are: \", end='')\n",
+    "head.print_list()\n",
+    "result = reverse_alternate_k_elements(head, 2)\n",
+    "print(\"Nodes of reversed LinkedList are: \", end='')\n",
+    "result.print_list()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nodes of original LinkedList are: 1 2 3 4 5 6 \n",
+      "4\n",
+      "Nodes of rotated LinkedList are: 5 6 1 2 3 4 \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Problem challenge 2 \n",
+    "from __future__ import print_function\n",
+    "\n",
+    "\n",
+    "class Node:\n",
+    "  def __init__(self, value, next=None):\n",
+    "    self.value = value\n",
+    "    self.next = next\n",
+    "\n",
+    "  def print_list(self):\n",
+    "    temp = self\n",
+    "    while temp is not None:\n",
+    "      print(temp.value, end=\" \")\n",
+    "      temp = temp.next\n",
+    "    print()\n",
+    "\n",
+    "\n",
+    "def rotate(head, rotations):\n",
+    "    if head is None or head.next is None or rotations <=0:\n",
+    "        return head\n",
+    "\n",
+    "    last_node = head\n",
+    "    list_length = 1\n",
+    "\n",
+    "    while last_node.next:\n",
+    "        last_node= last_node.next\n",
+    "        list_length+=1\n",
+    "    \n",
+    "    last_node.next = head\n",
+    "    rotations %=list_length\n",
+    "    ski_length =  list_length - rotations\n",
+    "    last_node_of_rotated_list = head\n",
+    "    for i in range(ski_length-1):\n",
+    "      \n",
+    "      last_node_of_rotated_list = last_node_of_rotated_list.next\n",
+    "    # print(last_node_of_rotated_list.value)\n",
+    "    head = last_node_of_rotated_list.next\n",
+    "    last_node_of_rotated_list.next = None\n",
+    "    return head\n",
+    "\n",
+    "head = Node(1)\n",
+    "head.next = Node(2)\n",
+    "head.next.next = Node(3)\n",
+    "head.next.next.next = Node(4)\n",
+    "head.next.next.next.next = Node(5)\n",
+    "head.next.next.next.next.next = Node(6)\n",
+    "\n",
+    "print(\"Nodes of original LinkedList are: \", end='')\n",
+    "head.print_list()\n",
+    "result = rotate(head, 8)\n",
+    "print(\"Nodes of rotated LinkedList are: \", end='')\n",
     "result.print_list()\n"
    ]
   }
