traverse level bfs

--- a/educative/bfs/bfs.ipynb
+++ b/educative/bfs/bfs.ipynb
@@ -44,6 +44,7 @@
     "    while queue:\n",
     "        levelZie = len(queue)\n",
     "        currLevel =[]\n",
+    "        print('levelZie',levelZie)\n",
     "        for _ in range(levelZie):\n",
     "            currNode = queue.popleft()\n",
     "\n",
