feat: reversal order travel

--- a/educative/bfs/bfs.ipynb
+++ b/educative/bfs/bfs.ipynb
@@ -13,7 +13,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Level order traversal: [[12], [7, 1], [9, 10, 5]]\n"
+      "Level order traversal: None\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "    while queue:\n",
     "        levelZie = len(queue)\n",
     "        currLevel =[]\n",
-    "        print('levelZie',levelZie)\n",
+    "        \n",
     "        for _ in range(levelZie):\n",
     "            currNode = queue.popleft()\n",
     "\n",
@@ -56,7 +56,7 @@
     "                queue.append(currNode.right)\n",
     "        result.append(currLevel)\n",
     "\n",
-    "    return result\n",
+    "        \n",
     "\n",
     "root = TreeNode(12)\n",
     "root.left = TreeNode(7)\n",
@@ -65,6 +65,67 @@
     "root.right.left = TreeNode(10)\n",
     "root.right.right = TreeNode(5)\n",
     "print(\"Level order traversal: \" + str(traverse(root)))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reverse level order traversal: deque([[12, <__main__.TreeNode object at 0x105b902e0>, <__main__.TreeNode object at 0x105b901f0>]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#reverse level order traversal easy\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "class TreeNode:\n",
+    "  def __init__(self, val):\n",
+    "    self.val = val\n",
+    "    self.left, self.right = None, None\n",
+    "\n",
+    "def traverse(root):\n",
+    "    result = deque()\n",
+    "    if root is None:\n",
+    "        return result\n",
+    "    queue = deque()\n",
+    "    queue.append(root)\n",
+    "    while queue:\n",
+    "        level=[]\n",
+    "        for _ in range(len(queue)):\n",
+    "            curNode = queue.popleft()\n",
+    "\n",
+    "            level.append(curNode.val)\n",
+    "            \n",
+    "            if curNode.left:\n",
+    "                queue.append(curNode.left)\n",
+    "            if curNode.right:\n",
+    "                queue.append(curNode.right)\n",
+    "        result.appendleft(level)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "\n",
+    "root = TreeNode(12)\n",
+    "root.left = TreeNode(7)\n",
+    "root.right = TreeNode(1)\n",
+    "root.left.left = TreeNode(9)\n",
+    "root.right.left = TreeNode(10)\n",
+    "root.right.right = TreeNode(5)\n",
+    "print(\"Reverse level order traversal: \" + str(traverse(root)))\n",
     "\n",
     "\n"
    ]
