--- a/educative/bfs/bfs.ipynb
+++ b/educative/bfs/bfs.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -140,15 +140,10 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'true' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 51>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000002?line=48'>49</a>\u001b[0m root\u001b[39m.\u001b[39mright\u001b[39m.\u001b[39mleft\u001b[39m.\u001b[39mleft \u001b[39m=\u001b[39m TreeNode(\u001b[39m20\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000002?line=49'>50</a>\u001b[0m root\u001b[39m.\u001b[39mright\u001b[39m.\u001b[39mleft\u001b[39m.\u001b[39mright \u001b[39m=\u001b[39m TreeNode(\u001b[39m17\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000002?line=50'>51</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mZigzag traversal: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(traverse(root)))\n",
-      "\u001b[1;32m/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb Cell 3'\u001b[0m in \u001b[0;36mtraverse\u001b[0;34m(root)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000002?line=14'>15</a>\u001b[0m queue \u001b[39m=\u001b[39m deque()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000002?line=15'>16</a>\u001b[0m queue\u001b[39m.\u001b[39mappend(root)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000002?line=17'>18</a>\u001b[0m leftToRight\u001b[39m=\u001b[39mtrue\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000002?line=18'>19</a>\u001b[0m \u001b[39mwhile\u001b[39;00m queue:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000002?line=19'>20</a>\u001b[0m     currentLevel\u001b[39m=\u001b[39mdeque()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'true' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zigzag traversal: [[12], [1, 7], [9, 10, 5], [17, 20]]\n"
      ]
     }
    ],
@@ -170,7 +165,7 @@
     "    queue = deque()\n",
     "    queue.append(root)\n",
     "\n",
-    "    leftToRight=True\n",
+    "    leftToRight= True\n",
     "    while queue:\n",
     "        currentLevel=deque()\n",
     "\n",
@@ -208,14 +203,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 37>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=34'>35</a>\u001b[0m root\u001b[39m.\u001b[39mright\u001b[39m.\u001b[39mleft \u001b[39m=\u001b[39m TreeNode(\u001b[39m10\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=35'>36</a>\u001b[0m root\u001b[39m.\u001b[39mright\u001b[39m.\u001b[39mright \u001b[39m=\u001b[39m TreeNode(\u001b[39m5\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=36'>37</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mLevel averages are: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(find_level_averages(root)))\n",
+      "\u001b[1;32m/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb Cell 4'\u001b[0m in \u001b[0;36mfind_level_averages\u001b[0;34m(root)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=21'>22</a>\u001b[0m         \u001b[39mif\u001b[39;00m curNode\u001b[39m.\u001b[39mright:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=22'>23</a>\u001b[0m             queue\u001b[39m.\u001b[39mappend(curNode\u001b[39m.\u001b[39mright)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=23'>24</a>\u001b[0m     result\u001b[39m.\u001b[39mappend(levelSum\u001b[39m/\u001b[39m\u001b[39mlen\u001b[39;49m(levelSize))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=25'>26</a>\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class TreeNode:\n",
+    "  def __init__(self, val):\n",
+    "    self.val = val\n",
+    "    self.left, self.right = None, None\n",
+    "\n",
+    "\n",
+    "def find_level_averages(root):\n",
+    "    result = []\n",
+    "    if root is None:\n",
+    "        return result\n",
+    "    queue = deque()\n",
+    "    queue.append(root)\n",
+    "\n",
+    "    while queue:\n",
+    "        levelSize = len(queue)\n",
+    "        levelSum=0\n",
+    "        for _ in range(len(queue)):\n",
+    "            curNode = queue.popleft()\n",
+    "            levelSum+=curNode.val\n",
+    "            if curNode.left:\n",
+    "                queue.append(curNode.left)\n",
+    "            if curNode.right:\n",
+    "                queue.append(curNode.right)\n",
+    "        result.append(levelSum/levelSize)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "\n",
+    "root = TreeNode(12)\n",
+    "root.left = TreeNode(7)\n",
+    "root.right = TreeNode(1)\n",
+    "root.left.left = TreeNode(9)\n",
+    "root.left.right = TreeNode(2)\n",
+    "root.right.left = TreeNode(10)\n",
+    "root.right.right = TreeNode(5)\n",
+    "print(\"Level averages are: \" + str(find_level_averages(root)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
