feat: connect level order siblings

--- a/educative/bfs/bfs.ipynb
+++ b/educative/bfs/bfs.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -211,15 +211,10 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 37>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=34'>35</a>\u001b[0m root\u001b[39m.\u001b[39mright\u001b[39m.\u001b[39mleft \u001b[39m=\u001b[39m TreeNode(\u001b[39m10\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=35'>36</a>\u001b[0m root\u001b[39m.\u001b[39mright\u001b[39m.\u001b[39mright \u001b[39m=\u001b[39m TreeNode(\u001b[39m5\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=36'>37</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mLevel averages are: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(find_level_averages(root)))\n",
-      "\u001b[1;32m/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb Cell 4'\u001b[0m in \u001b[0;36mfind_level_averages\u001b[0;34m(root)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=21'>22</a>\u001b[0m         \u001b[39mif\u001b[39;00m curNode\u001b[39m.\u001b[39mright:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=22'>23</a>\u001b[0m             queue\u001b[39m.\u001b[39mappend(curNode\u001b[39m.\u001b[39mright)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=23'>24</a>\u001b[0m     result\u001b[39m.\u001b[39mappend(levelSum\u001b[39m/\u001b[39m\u001b[39mlen\u001b[39;49m(levelSize))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000003?line=25'>26</a>\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level averages are: [12.0, 4.0, 6.5]\n"
      ]
     }
    ],
@@ -270,6 +265,210 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tree Minimum Depth: 2\n",
+      "Tree Minimum Depth: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class TreeNode:\n",
+    "    def __init__(self,val):\n",
+    "        self.val = val\n",
+    "        self.left, self.right = None,None\n",
+    "\n",
+    "def find_minimum_depth(root):\n",
+    "    minDepth=0\n",
+    "    if root is None:\n",
+    "        return minDepth\n",
+    "    \n",
+    "    queue = deque()\n",
+    "    queue.append(root)\n",
+    "\n",
+    "    while queue:\n",
+    "        minDepth+=1\n",
+    "        for _ in range(len(queue)):\n",
+    "            curNode = queue.popleft()\n",
+    "            if not curNode.left and not curNode.right:\n",
+    "                return minDepth\n",
+    "            if curNode.left:\n",
+    "                queue.append(curNode.left)\n",
+    "            if curNode.right:\n",
+    "                queue.append(curNode.right)\n",
+    "\n",
+    "\n",
+    "    return minDepth\n",
+    "        \n",
+    "\n",
+    "root = TreeNode(12)\n",
+    "root.left = TreeNode(7)\n",
+    "root.right = TreeNode(1)\n",
+    "root.right.left = TreeNode(10)\n",
+    "root.right.right = TreeNode(5)\n",
+    "print(\"Tree Minimum Depth: \" + str(find_minimum_depth(root)))\n",
+    "root.left.left = TreeNode(9)\n",
+    "root.right.left.left = TreeNode(11)\n",
+    "print(\"Tree Minimum Depth: \" + str(find_minimum_depth(root)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "12\n",
+      "7\n",
+      "1\n",
+      "9\n",
+      "10\n",
+      "12\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "class TreeNode:\n",
+    "    def __init__(self,val):\n",
+    "        self.val = val\n",
+    "        self.left, self.right = None, None\n",
+    "\n",
+    "def find_successor(root,key):\n",
+    "\n",
+    "    if root is None:\n",
+    "        return None\n",
+    "    queue = deque()\n",
+    "    queue.append(root)\n",
+    "    \n",
+    "    while queue:\n",
+    "        \n",
+    "        curNode = queue.popleft()\n",
+    "        print(curNode.val)\n",
+    "        if curNode.left:\n",
+    "            queue.append(curNode.left)\n",
+    "        if curNode.right:\n",
+    "                queue.append(curNode.right)\n",
+    "        if curNode.val==key:\n",
+    "            break\n",
+    "\n",
+    "    return queue[0] if queue else None\n",
+    "\n",
+    "                \n",
+    "root = TreeNode(1);\n",
+    "root.left = TreeNode(2);\n",
+    "root.right = TreeNode(3);\n",
+    "root.left.left = TreeNode(4);\n",
+    "root.left.right = TreeNode(5);\n",
+    "\n",
+    "result = find_successor(root, 3)\n",
+    "if result:\n",
+    "    print(result.val)\n",
+    "\n",
+    "root = TreeNode(12)\n",
+    "root.left = TreeNode(7)\n",
+    "root.right = TreeNode(1)\n",
+    "root.left.left = TreeNode(9)\n",
+    "root.right.left = TreeNode(10)\n",
+    "root.right.right = TreeNode(5)\n",
+    "\n",
+    "result = find_successor(root, 9)\n",
+    "if result:\n",
+    "    print(result.val)\n",
+    "\n",
+    "result = find_successor(root, 12)\n",
+    "if result:\n",
+    "    print(result.val)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level order traversal using 'next' pointer: \n",
+      "12 \n",
+      "7 \n",
+      "9 \n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import print_function\n",
+    "from collections import deque\n",
+    "\n",
+    "\n",
+    "class TreeNode:\n",
+    "  def __init__(self, val):\n",
+    "    self.val = val\n",
+    "    self.left, self.right, self.next = None, None, None\n",
+    "\n",
+    "  # level order traversal using 'next' pointer\n",
+    "  def print_level_order(self):\n",
+    "    nextLevelRoot = self\n",
+    "    while nextLevelRoot:\n",
+    "      current = nextLevelRoot\n",
+    "      nextLevelRoot = None\n",
+    "      while current:\n",
+    "        print(str(current.val) + \" \", end='')\n",
+    "        if not nextLevelRoot:\n",
+    "          if current.left:\n",
+    "            nextLevelRoot = current.left\n",
+    "          elif current.right:\n",
+    "            nextLevelRoot = current.right\n",
+    "        current = current.next\n",
+    "      print()\n",
+    "\n",
+    "\n",
+    "def connect_level_order_siblings(root):\n",
+    "  # TODO: Write your code here\n",
+    "  return\n",
+    "\n",
+    "root = TreeNode(12)\n",
+    "root.left = TreeNode(7)\n",
+    "root.right = TreeNode(1)\n",
+    "root.left.left = TreeNode(9)\n",
+    "root.right.left = TreeNode(10)\n",
+    "root.right.right = TreeNode(5)\n",
+    "connect_level_order_siblings(root)\n",
+    "\n",
+    "print(\"Level order traversal using 'next' pointer: \")\n",
+    "root.print_level_order()\n",
+    "\n",
+    "\n",
+    "main()\n"
    ]
   }
  ],
