feat: connect all level order siblings

--- a/educative/bfs/bfs.ipynb
+++ b/educative/bfs/bfs.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -420,8 +420,8 @@
      "text": [
       "Level order traversal using 'next' pointer: \n",
       "12 \n",
-      "7 \n",
-      "9 \n"
+      "7 1 \n",
+      "9 10 5 \n"
      ]
     }
    ],
@@ -453,8 +453,23 @@
     "\n",
     "\n",
     "def connect_level_order_siblings(root):\n",
-    "  # TODO: Write your code here\n",
-    "  return\n",
+    "    if root is None:\n",
+    "        return None\n",
+    "    queue = deque()\n",
+    "    queue.append(root)\n",
+    "    while queue:\n",
+    "        prevNode=None\n",
+    "\n",
+    "        for _ in range(len(queue)):\n",
+    "            curNode = queue.popleft()\n",
+    "            if prevNode:\n",
+    "                prevNode.next = curNode\n",
+    "            prevNode = curNode\n",
+    "            if curNode.left:\n",
+    "                queue.append(curNode.left)\n",
+    "            if curNode.right:\n",
+    "                queue.append(curNode.right)\n",
+    "        \n",
     "\n",
     "root = TreeNode(12)\n",
     "root.left = TreeNode(7)\n",
@@ -466,9 +481,82 @@
     "\n",
     "print(\"Level order traversal using 'next' pointer: \")\n",
     "root.print_level_order()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "7\n",
+      "1\n",
+      "9\n",
+      "10\n",
+      "5\n",
+      "Traversal using 'next' pointer: 12 "
+     ]
+    }
+   ],
+   "source": [
+    "#Problem challenge 1 \n",
+    "#connect all level order siblings medium\n",
+    "\n",
+    "from __future__ import print_function\n",
+    "from collections import deque\n",
     "\n",
     "\n",
-    "main()\n"
+    "class TreeNode:\n",
+    "  def __init__(self, val):\n",
+    "    self.val = val\n",
+    "    self.left, self.right, self.next = None, None, None\n",
+    "\n",
+    "  # tree traversal using 'next' pointer\n",
+    "  def print_tree(self):\n",
+    "    print(\"Traversal using 'next' pointer: \", end='')\n",
+    "    current = self\n",
+    "    while current:\n",
+    "      print(str(current.val) + \" \", end='')\n",
+    "      current = current.next\n",
+    "\n",
+    "\n",
+    "def connect_all_siblings(root):\n",
+    "    if root is None:\n",
+    "        return None\n",
+    "    queue = deque()\n",
+    "    queue.append(root)\n",
+    "    prevNode=None\n",
+    "    while queue:\n",
+    "        \n",
+    "        curNode = queue.popleft()\n",
+    "        if prevNode:\n",
+    "            prevNode.next = curNode\n",
+    "        prevNode = curNode\n",
+    "        if curNode.left:\n",
+    "            queue.append(curNode.left)\n",
+    "        if curNode.right:\n",
+    "            queue.append(curNode.right)\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "root = TreeNode(12)\n",
+    "root.left = TreeNode(7)\n",
+    "root.right = TreeNode(1)\n",
+    "root.left.left = TreeNode(9)\n",
+    "root.right.left = TreeNode(10)\n",
+    "root.right.right = TreeNode(5)\n",
+    "connect_all_siblings(root)\n",
+    "root.print_tree()\n",
+    "\n"
    ]
   }
  ],
