feat: right view of a binary tree easy

--- a/educative/bfs/bfs.ipynb
+++ b/educative/bfs/bfs.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -497,13 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "7\n",
-      "1\n",
-      "9\n",
-      "10\n",
-      "5\n",
-      "Traversal using 'next' pointer: 12 "
+      "Traversal using 'next' pointer: 12 7 1 9 10 5 "
      ]
     }
    ],
@@ -556,6 +550,92 @@
     "root.right.right = TreeNode(5)\n",
     "connect_all_siblings(root)\n",
     "root.print_tree()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tree right view: \n",
+      "12 "
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'val'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 44>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000008?line=42'>43</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mTree right view: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000008?line=43'>44</a>\u001b[0m \u001b[39mfor\u001b[39;00m node \u001b[39min\u001b[39;00m result:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/orgilbatbatsaikhan/my_docs/my_git/algorithm/educative/bfs/bfs.ipynb#ch0000008?line=44'>45</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mstr\u001b[39m(node\u001b[39m.\u001b[39;49mval) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m, end\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'val'"
+     ]
+    }
+   ],
+   "source": [
+    "#right view of the binary tree easy\n",
+    "\n",
+    "from __future__ import print_function\n",
+    "from collections import deque\n",
+    "\n",
+    "\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "        self.left, self.right = None, None\n",
+    "\n",
+    "\n",
+    "def tree_right_view(root):\n",
+    "    result = []\n",
+    "    if root is None:\n",
+    "        return None    \n",
+    "    queue = deque()\n",
+    "    queue.append(root)\n",
+    "    while queue:\n",
+    "        levelSize = len(queue)\n",
+    "        lastNode=None\n",
+    "        for i in range(0,len(queue)):\n",
+    "            curNode = queue.popleft()    \n",
+    "            # if i==levelSize-1:\n",
+    "            #     result.append(curNode)\n",
+    "            lastNode = curNode\n",
+    "            if curNode.left:\n",
+    "                queue.append(curNode.left)\n",
+    "            if curNode.right:\n",
+    "                queue.append(curNode.right)\n",
+    "        result.append(lastNode)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "root = TreeNode(12)\n",
+    "root.left = TreeNode(7)\n",
+    "root.right = TreeNode(1)\n",
+    "root.left.left = TreeNode(9)\n",
+    "root.right.left = TreeNode(10)\n",
+    "root.right.right = TreeNode(5)\n",
+    "root.left.left.left = TreeNode(3)\n",
+    "result = tree_right_view(root)\n",
+    "print(\"Tree right view: \")\n",
+    "for node in result:\n",
+    "    print(str(node.val) + \" \", end='')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
