feat: find sum of path numbers

--- a/educative/dfs/dfs.ipynb
+++ b/educative/dfs/dfs.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -59,12 +59,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[12, 7, 4]\n",
       "[12, 7]\n",
-      "[12]\n",
+      "[12, 1, 10]\n",
+      "[12, 1, 5]\n",
       "[12, 1]\n",
-      "[12, 1]\n",
       "[12]\n",
-      "[]\n",
       "Tree paths with required_sum 23: [[12, 7, 4], [12, 1, 10]]\n"
      ]
     }
@@ -108,6 +108,59 @@
     "required_sum = 23\n",
     "print(\"Tree paths with required_sum \" + str(required_sum) +\n",
     "    \": \" + str(find_paths(root, required_sum)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "3\n",
+      "1\n",
+      "6\n",
+      "5\n",
+      "Total Sum of Path Numbers: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sum of path numbers medium\n",
+    "#given binary tree where each node can only have a digit 0-9 value, each root to leaf path will represent a number.\n",
+    "# Find the total sum of all the numbers represented by all paths.\n",
+    "\n",
+    "class TreeNode:\n",
+    "    def __init__(self,val,left=None,right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "def find_sum_of_path_numbers(root):\n",
+    "\n",
+    "    print(root.val)\n",
+    "    if root.left:\n",
+    "        find_sum_of_path_numbers(root.left)\n",
+    "    if root.right:\n",
+    "        find_sum_of_path_numbers(root.right)\n",
+    "    return 1\n",
+    "\n",
+    "root = TreeNode(1)\n",
+    "root.left = TreeNode(0)\n",
+    "root.right = TreeNode(1)\n",
+    "root.left.left = TreeNode(1)\n",
+    "root.right.left = TreeNode(6)\n",
+    "root.right.right = TreeNode(5)\n",
+    "print(\"Total Sum of Path Numbers: \" + str(find_sum_of_path_numbers(root)))\n",
     "\n"
    ]
   }
